--- a/.gitignore
+++ b/.gitignore
@@ -2,8 +2,10 @@
 node_modules
 dist
 
-graph.svg
-graph.png
-
 public/uploads/images/*/*.*
 !public/uploads/images/*/default.png
+
+.gitlab-ci.yml
+.gitignore
+.dockerignore
+.DS_store
